Hm... I don't get it. Sometimes when allocating space for TreeData it fails and returns NULL. Sometimes, it crashes. Sometimes, it loops on endless junk-data(-1, -1...) Sometimes, it DOES work as intended. Rarely. All this without me changing anything. At pure random. Also this thing eats 1.7 Gb of memory. Hell knows why. =(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Workbench)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Workbench main.cpp BST.h NodeData.h TreeSVG.h TreeSVG.cpp)
+add_executable(Workbench main.cpp BST.h NodeData.h TreeSVG.h)
