--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Workbench)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Workbench main.cpp BST.h NodeData.h TreeSVG.h)
+add_executable(Workbench main.cpp BST.h NodeData.h TreeSVG.h tests.h tests.cpp ExampleStruct.h)
